--- a/src/index.html
+++ b/src/index.html
@@ -117,6 +117,190 @@
           </div>
         </section>
       </div>
+
+      <section class="container py-24">
+        <div class="mb-20 text-center">
+          <h2
+            class="mb-4 bg-gradient-to-r from-purple-500 to-pink-500 bg-clip-text text-2xl font-medium text-transparent md:text-3xl lg:text-4xl"
+          >
+            What I Do
+          </h2>
+          <p
+            class="mx-auto bg-gradient-to-r from-purple-500 to-pink-600 bg-clip-text text-base text-transparent md:text-xl lg:w-3/4 xl:w-2/4"
+          >
+            I specialize in crafting sleek, intuitive web applications and
+            digital experiences. Here are a few technologies I've been working
+            with:
+          </p>
+        </div>
+
+        <div class="flex flex-wrap">
+          <div class="w-full p-4 sm:w-1/2 md:w-1/3 lg:w-1/4">
+            <div class="group rounded-lg bg-gray-100 p-6 shadow-md">
+              <h2 class="mb-4 text-lg font-medium">Web Development</h2>
+              <div class="h-2.5 w-full rounded-full bg-gray-200">
+                <div
+                  class="h-2.5 w-3/5 rounded-full bg-gradient-to-r from-purple-500 to-pink-600 transition-all duration-500 ease-in-out group-hover:w-full"
+                ></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="w-full p-4 sm:w-1/2 md:w-1/3 lg:w-1/4">
+            <div class="group rounded-lg bg-gray-100 p-6 shadow-md">
+              <h2 class="mb-4 text-lg font-medium">JavaScript</h2>
+              <div class="h-2.5 w-full rounded-full bg-gray-200">
+                <div
+                  class="h-2.5 w-4/5 rounded-full bg-gradient-to-r from-purple-500 to-pink-600 transition-all duration-500 ease-in-out group-hover:w-full"
+                ></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="w-full p-4 sm:w-1/2 md:w-1/3 lg:w-1/4">
+            <div class="group rounded-lg bg-gray-100 p-6 shadow-md">
+              <h2 class="mb-4 text-lg font-medium">React</h2>
+              <div class="h-2.5 w-full rounded-full bg-gray-200">
+                <div
+                  class="h-2.5 w-2/5 rounded-full bg-gradient-to-r from-purple-500 to-pink-600 transition-all duration-500 ease-in-out group-hover:w-full"
+                ></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="w-full p-4 sm:w-1/2 md:w-1/3 lg:w-1/4">
+            <div class="group rounded-lg bg-gray-100 p-6 shadow-md">
+              <h2 class="mb-4 text-lg font-medium">CSS & HTML</h2>
+              <div class="h-2.5 w-full rounded-full bg-gray-200">
+                <div
+                  class="h-2.5 w-2/4 rounded-full bg-gradient-to-r from-purple-500 to-pink-600 transition-all duration-500 ease-in-out group-hover:w-full"
+                ></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="w-full p-4 sm:w-1/2 md:w-1/3 lg:w-1/4">
+            <div class="group rounded-lg bg-gray-100 p-6 shadow-md">
+              <h2 class="mb-4 text-lg font-medium">TypeScript</h2>
+              <div class="h-2.5 w-full rounded-full bg-gray-200">
+                <div
+                  class="h-2.5 w-1/4 rounded-full bg-gradient-to-r from-purple-500 to-pink-600 transition-all duration-500 ease-in-out group-hover:w-full"
+                ></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="w-full p-4 sm:w-1/2 md:w-1/3 lg:w-1/4">
+            <div class="group rounded-lg bg-gray-100 p-6 shadow-md">
+              <h2 class="mb-4 text-lg font-medium">Tailwind CSS</h2>
+              <div class="h-2.5 w-full rounded-full bg-gray-200">
+                <div
+                  class="h-2.5 w-2/5 rounded-full bg-gradient-to-r from-purple-500 to-pink-600 transition-all duration-500 ease-in-out group-hover:w-full"
+                ></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="w-full p-4 sm:w-1/2 md:w-1/3 lg:w-1/4">
+            <div class="group rounded-lg bg-gray-100 p-6 shadow-md">
+              <h2 class="mb-4 text-lg font-medium">NextJS</h2>
+              <div class="h-2.5 w-full rounded-full bg-gray-200">
+                <div
+                  class="h-2.5 w-4/6 rounded-full bg-gradient-to-r from-purple-500 to-pink-600 transition-all duration-500 ease-in-out group-hover:w-full"
+                ></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="w-full p-4 sm:w-1/2 md:w-1/3 lg:w-1/4">
+            <div class="group rounded-lg bg-gray-100 p-6 shadow-md">
+              <h2 class="mb-4 text-lg font-medium">Redux</h2>
+              <div class="h-2.5 w-full rounded-full bg-gray-200">
+                <div
+                  class="h-2.5 w-2/5 rounded-full bg-gradient-to-r from-purple-500 to-pink-600 transition-all duration-500 ease-in-out group-hover:w-full"
+                ></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="w-full p-4 sm:w-1/2 md:w-1/3 lg:w-1/4">
+            <div class="group rounded-lg bg-gray-100 p-6 shadow-md">
+              <h2 class="mb-4 text-lg font-medium">Apollo</h2>
+              <div class="h-2.5 w-full rounded-full bg-gray-200">
+                <div
+                  class="h-2.5 w-1/3 rounded-full bg-gradient-to-r from-purple-500 to-pink-600 transition-all duration-500 ease-in-out group-hover:w-full"
+                ></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="w-full p-4 sm:w-1/2 md:w-1/3 lg:w-1/4">
+            <div class="group rounded-lg bg-gray-100 p-6 shadow-md">
+              <h2 class="mb-4 text-lg font-medium">Gatsby</h2>
+              <div class="h-2.5 w-full rounded-full bg-gray-200">
+                <div
+                  class="h-2.5 w-1/4 rounded-full bg-gradient-to-r from-purple-500 to-pink-600 transition-all duration-500 ease-in-out group-hover:w-full"
+                ></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="w-full p-4 sm:w-1/2 md:w-1/3 lg:w-1/4">
+            <div class="group rounded-lg bg-gray-100 p-6 shadow-md">
+              <h2 class="mb-4 text-lg font-medium">GraphQL</h2>
+              <div class="h-2.5 w-full rounded-full bg-gray-200">
+                <div
+                  class="h-2.5 w-3/4 rounded-full bg-gradient-to-r from-purple-500 to-pink-600 transition-all duration-500 ease-in-out group-hover:w-full"
+                ></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="w-full p-4 sm:w-1/2 md:w-1/3 lg:w-1/4">
+            <div class="group rounded-lg bg-gray-100 p-6 shadow-md">
+              <h2 class="mb-4 text-lg font-medium">NodeJS</h2>
+              <div class="h-2.5 w-full rounded-full bg-gray-200">
+                <div
+                  class="h-2.5 w-3/4 rounded-full bg-gradient-to-r from-purple-500 to-pink-600 transition-all duration-500 ease-in-out group-hover:w-full"
+                ></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="rounded-bl-[150px] rounded-tr-[150px] bg-gradient-to-r from-purple-500 to-pink-600 py-24 text-white"
+      >
+        <div class="container text-center">
+          <img
+            src="assets/profile-picture.webp"
+            class="mx-auto mb-10 w-1/3 rounded-full md:w-1/2 lg:w-1/4"
+            alt="Rishav Pandey"
+          />
+
+          <div class="mx-auto w-full lg:w-2/3">
+            <h2 class="mb-4 text-2xl font-medium md:text-3xl lg:text-4xl">
+              About Me
+            </h2>
+            <p class="mb-4 text-base md:text-xl">
+              Welcome to the crossroads where coding meets creativity. I am
+              Rishav, a seasoned computer engineer dedicated to the art and
+              science of web development. My journey is marked by a relentless
+              pursuit of innovation, a profound understanding of technology, and
+              a heartfelt dedication to user experience.
+            </p>
+            <p class="mb-4 text-base md:text-xl">
+              My professional path is paved with groundbreaking projects that
+              stretch the limits of what's possible on the web. From sleek,
+              responsive websites that flow like water across devices, to
+              complex applications that process data with the speed and
+              precision of thought, my portfolio is a testament to the power of
+              human-centric design and clean, efficient code.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="./script.js"></script>
   </body>
