--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
       <div
         class="rounded-bl-[150px] bg-gradient-to-r from-purple-500 via-pink-400 to-pink-600 p-[1px]"
       >
+        <!-- Header -->
         <header class="container my-12 text-white">
           <nav>
             <div class="flex items-center justify-between">
@@ -91,6 +92,7 @@
             </ul>
           </nav>
         </header>
+        <!-- Hero Section -->
         <section class="container my-24 text-center text-white">
           <h1 class="mb-4 text-2xl md:text-3xl lg:text-5xl">
             A Seasoned Frontend Engineer
@@ -118,6 +120,7 @@
         </section>
       </div>
 
+      <!-- Skills/What I Do Section -->
       <section class="container py-24">
         <div class="mb-20 text-center">
           <h2
@@ -269,6 +272,7 @@
         </div>
       </section>
 
+      <!-- About Section -->
       <section
         class="rounded-bl-[150px] rounded-tr-[150px] bg-gradient-to-r from-purple-500 to-pink-600 py-24 text-white"
       >
@@ -298,6 +302,261 @@
               precision of thought, my portfolio is a testament to the power of
               human-centric design and clean, efficient code.
             </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Projects Section -->
+      <section class="container py-24">
+        <div class="mb-20 text-center">
+          <h2
+            class="mb-4 bg-gradient-to-r from-purple-500 to-pink-500 bg-clip-text text-2xl font-medium text-transparent md:text-3xl lg:text-4xl"
+          >
+            My Projects
+          </h2>
+          <p
+            class="mx-auto bg-gradient-to-r from-purple-500 to-pink-600 bg-clip-text text-base text-transparent md:text-xl lg:w-3/4 xl:w-2/4"
+          >
+            Here are a few projects I've been working on. You can check them out
+            on GitHub.
+          </p>
+        </div>
+
+        <div
+          class="grid grid-cols-1 gap-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4"
+        >
+          <!-- Personal Finance Tracker -->
+          <div
+            class="flex transform flex-col items-center justify-between gap-y-4 rounded-lg bg-gray-100 p-6 text-center shadow-md transition-all duration-500 ease-in-out hover:skew-x-6 hover:skew-y-1"
+          >
+            <div class="space-y-4">
+              <img
+                class="mx-auto w-24 rounded-full object-cover sm:w-32 md:w-40 lg:w-48"
+                src="./assets/project-1.webp"
+                alt="Personal Finance Tracker"
+              />
+              <h3 class="text-xl font-semibold sm:text-2xl">
+                Personal Finance Tracker
+              </h3>
+              <p>
+                Created a personal finance app to help users track expenses, set
+                budgets, and visualize financial health over time.
+              </p>
+            </div>
+            <a
+              href="#"
+              class="bg-gradient-to-r from-purple-500 to-pink-600 bg-clip-text text-transparent hover:from-purple-700 hover:to-pink-800"
+              >Live Preview</a
+            >
+          </div>
+
+          <!-- Smart Home Automation System -->
+          <div
+            class="flex transform flex-col items-center justify-between gap-y-4 rounded-lg bg-gray-100 p-6 shadow-md transition-all duration-200 ease-in-out hover:skew-x-6"
+          >
+            <div class="space-y-4 text-center">
+              <img
+                class="mx-auto w-24 rounded-full object-cover sm:w-32 md:w-40 lg:w-48"
+                src="./assets/project-2.webp"
+                alt="Smart Home Automation System"
+              />
+              <h3 class="text-xl font-semibold sm:text-2xl">
+                Smart Home Automation System
+              </h3>
+              <p>
+                Developed a comprehensive smart home automation system allowing
+                users to control devices through a web interface. Integrated IoT
+                for real-time monitoring.
+              </p>
+            </div>
+            <a
+              href="#"
+              class="bg-gradient-to-r from-purple-500 to-pink-600 bg-clip-text text-transparent hover:from-purple-700 hover:to-pink-800"
+              >Live Preview
+            </a>
+          </div>
+
+          <!-- E-Commerce Platform for Local Artisans -->
+          <div
+            class="flex transform flex-col items-center justify-between gap-y-4 rounded-lg bg-gray-100 p-6 shadow-md transition-all duration-500 ease-in-out hover:skew-x-6 hover:skew-y-1"
+          >
+            <div class="space-y-4 text-center">
+              <img
+                class="mx-auto w-24 rounded-full object-cover sm:w-32 md:w-40 lg:w-48"
+                src="./assets/project-3.webp"
+                alt="E-Commerce Platform for Local Artisans"
+              />
+              <h3 class="text-xl font-semibold sm:text-2xl">
+                E-Commerce Platform for Local Artisans
+              </h3>
+              <p>
+                Built an e-commerce platform to showcase and sell products by
+                local artisans, featuring a custom CMS and payment integration.
+              </p>
+            </div>
+            <a
+              href="#"
+              class="bg-gradient-to-r from-purple-500 to-pink-600 bg-clip-text text-transparent hover:from-purple-700 hover:to-pink-800"
+              >Live Preview</a
+            >
+          </div>
+
+          <!-- Health Monitoring Wearable App -->
+          <div
+            class="flex transform flex-col items-center justify-between gap-y-4 rounded-lg bg-gray-100 p-6 shadow-md transition-all duration-500 ease-in-out hover:skew-x-6 hover:skew-y-1"
+          >
+            <div class="space-y-4 text-center">
+              <img
+                class="mx-auto w-24 rounded-full object-cover sm:w-32 md:w-40 lg:w-48"
+                src="./assets/project-4.webp"
+                alt="Health Monitoring Wearable App"
+              />
+              <h3 class="text-xl font-semibold sm:text-2xl">
+                Health Monitoring Wearable App
+              </h3>
+              <p>
+                Developed an app for wearable technology to monitor vital signs
+                and physical activity, with features for fitness goals and
+                health tips.
+              </p>
+            </div>
+            <a
+              href="#"
+              class="bg-gradient-to-r from-purple-500 to-pink-600 bg-clip-text text-transparent hover:from-purple-700 hover:to-pink-800"
+              >Live Preview</a
+            >
+          </div>
+
+          <!-- Virtual Event Management Platform -->
+          <div
+            class="flex transform flex-col items-center justify-between gap-y-4 rounded-lg bg-gray-100 p-6 shadow-md transition-all duration-500 ease-in-out hover:skew-x-6 hover:skew-y-1"
+          >
+            <div class="space-y-4 text-center">
+              <img
+                class="mx-auto w-24 rounded-full object-cover sm:w-32 md:w-40 lg:w-48"
+                src="./assets/project-5.webp"
+                alt="Virtual Event Management Platform"
+              />
+              <h3 class="text-xl font-semibold sm:text-2xl">
+                Virtual Event Management Platform
+              </h3>
+              <p>
+                Engineered a virtual event platform for online conferences and
+                webinars, with live streaming and interactive participant
+                features.
+              </p>
+            </div>
+            <a
+              href="#"
+              class="bg-gradient-to-r from-purple-500 to-pink-600 bg-clip-text text-transparent hover:from-purple-700 hover:to-pink-800"
+              >Live Preview</a
+            >
+          </div>
+
+          <div
+            class="flex transform flex-col items-center justify-between gap-y-4 rounded-lg bg-gray-100 p-6 shadow-md transition-all duration-500 ease-in-out hover:skew-x-6 hover:skew-y-1"
+          >
+            <div class="space-y-4 text-center">
+              <img
+                class="mx-auto w-24 rounded-full object-cover sm:w-32 md:w-40 lg:w-48"
+                src="./assets/project-6.webp"
+                alt="Virtual Event Management Platform"
+              />
+              <h3 class="text-xl font-semibold sm:text-2xl">
+                AI-Based Chatbot for Customer Service
+              </h3>
+              <p>
+                Implemented an AI-powered chatbot designed to improve customer
+                service for online businesses. The chatbot handles inquiries,
+                provides product recommendations, and supports ticketing systems
+                with natural language processing.
+              </p>
+            </div>
+            <a
+              href="#"
+              class="bg-gradient-to-r from-purple-500 to-pink-600 bg-clip-text text-transparent hover:from-purple-700 hover:to-pink-800"
+              >Live Preview</a
+            >
+          </div>
+
+          <div
+            class="flex transform flex-col items-center justify-between gap-y-4 rounded-lg bg-gray-100 p-6 shadow-md transition-all duration-500 ease-in-out hover:skew-x-6 hover:skew-y-1"
+          >
+            <div class="space-y-4 text-center">
+              <img
+                class="mx-auto w-24 rounded-full object-cover sm:w-32 md:w-40 lg:w-48"
+                src="./assets/project-7.webp"
+                alt="Virtual Event Management Platform"
+              />
+              <h3 class="text-xl font-semibold sm:text-2xl">
+                Recipe Sharing and Meal Application
+              </h3>
+              <p>
+                Launched a community-driven web application where users can
+                share recipes, plan meals, and create shopping lists. Features
+                ingredient-based search functionality and nutritional insights.
+              </p>
+            </div>
+            <a
+              href="#"
+              class="bg-gradient-to-r from-purple-500 to-pink-600 bg-clip-text text-transparent hover:from-purple-700 hover:to-pink-800"
+              >Live Preview</a
+            >
+          </div>
+
+          <div
+            class="flex transform flex-col items-center justify-between gap-y-4 rounded-lg bg-gray-100 p-6 shadow-md transition-all duration-500 ease-in-out hover:skew-x-6 hover:skew-y-1"
+          >
+            <div class="space-y-4 text-center">
+              <img
+                class="mx-auto w-24 rounded-full object-cover sm:w-32 md:w-40 lg:w-48"
+                src="./assets/project-8.webp"
+                alt="Virtual Event Management Platform"
+              />
+              <h3 class="text-xl font-semibold md:text-2xl">
+                Real Estate Property Listing Website
+              </h3>
+              <p>
+                Developed a real estate website offering comprehensive property
+                listings, virtual tours, and a powerful search engine.
+                Implemented user authentication for saving favorites and
+                scheduling viewings.
+              </p>
+            </div>
+            <a
+              href="#"
+              class="bg-gradient-to-r from-purple-500 to-pink-600 bg-clip-text text-transparent hover:from-purple-700 hover:to-pink-800"
+              >Live Preview</a
+            >
+          </div>
+        </div>
+      </section>
+
+      <!-- Summary Bar -->
+      <section
+        class="rounded-bl-[150px] rounded-tr-[150px] bg-gradient-to-r from-purple-500 to-pink-600 py-24 text-white"
+      >
+        <div
+          class="mx-auto flex max-w-[800px] flex-wrap justify-center gap-10 px-8 sm:justify-between"
+        >
+          <div class="flex flex-col items-center justify-center gap-4">
+            <img class="w-12" src="./assets/mooc.svg" alt="Online courses" />
+            <h3 class="text-xl font-semibold sm:text-2xl">40+</h3>
+            <p class="text-base sm:text-xl">MOOC's</p>
+          </div>
+          <div class="flex flex-col items-center justify-center gap-4">
+            <img class="w-12" src="./assets/project.svg" alt="Projects" />
+            <h3 class="text-xl font-semibold sm:text-2xl">10+</h3>
+            <p class="text-base sm:text-xl">Live Projects</p>
+          </div>
+          <div class="flex flex-col items-center justify-center gap-4">
+            <img
+              class="w-12"
+              src="./assets/award.svg"
+              alt="Awards and Honours"
+            />
+            <h3 class="text-xl font-semibold sm:text-2xl">40+</h3>
+            <p class="text-base sm:text-xl">Awards and Honours</p>
           </div>
         </div>
       </section>
